--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,32 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Typography from '~/components/common/Typography.astro';
+import Layout from '~/layouts/Layout.astro';
 ---
 
-<Layout>
-	<Welcome />
+<Layout title="Welcome Aboard, Voyager">
+  <main class="container">
+    <div class="space-y-5">
+      <p>
+        Toma asiento, abróchate el cinturón y prepárate para este viaje a través del tiempo y el espacio. Aquí, cada
+        palabra es una señal enviada a través del cosmos, esperando encontrar su destino.
+      </p>
+
+      <ul>
+        <li>
+          🔹 En Echo Capsules, descubrirás memorias y pensamientos atrapados en el vacío, ecos que resuenan a través de
+          las estrellas.
+        </li>
+        <li>
+          🔹 En Transmission, encontrarás un mensaje enviado desde otro rincon del universo, una promesa, un pacto.
+        </li>
+        <li>
+          🔹 En Signal Home, podrás enviar una señal a través del espacio a casa, cuando estés preparada para volver a estar juntos, para siempre.
+        </li>
+      </ul>
+
+      <p>No importa lo lejos que estés, siempre habrá una luz brillando en la oscuridad, guiándote de vuelta. Esta será la forma de comunicarme contigo para expresar mis emociones y lo mucho que te amo, aunque pasen los años, aunque cambies de numero, esta pagina siempre estará conectada a ti.</p>
+
+      <p>🌠 Disfruta el viaje. Las estrellas te esperan.</p>
+    </div>
+  </main>
 </Layout>
