--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,6 +32,7 @@ const { title, titleAlt, subtitle, hideTitle } = Astro.props;
   </body>
 </html>
 
+<script type="module" src="https://cdn.jsdelivr.net/npm/player.style/tailwind-audio/+esm"></script>
 <script>
   import Lenis from 'lenis'
   new Lenis({
