--- a/src/pages/journal/[slug].astro
+++ b/src/pages/journal/[slug].astro
@@ -20,7 +20,7 @@ const { title, heroImage } = post.data;
 ---
 
 <Layout title={title} hideTitle={true}>
-  <div class="pb-10">
+  <div class="container">
     <div class="aspect-video max-w-3xl  mx-auto rounded-lg overflow-hidden shadow-2xl">
       <img
         transition:name={transitionName}
