--- a/src/pages/journal/index.astro
+++ b/src/pages/journal/index.astro
@@ -15,7 +15,7 @@ const capsules = (await getCollection('diary')).filter(({ slug }) => !slug.start
           const transitionName = `post-img-${slug}`;
 
           return (
-          <a class="max-w-xs border rounded-xl border-slate-600 overflow-hidden block cursor-pointer" href={`/journal/${slug}`}>
+          <a class="md:max-w-xs border rounded-xl border-slate-600 overflow-hidden block cursor-pointer" href={`/journal/${slug}`}>
             <div class="aspect-video">
               <img transition:name={transitionName} src={data.heroImage} alt="heroImage" class="w-full h-full object-cover rounded-lg " />
             </div>
