--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Audio from '~/components/common/Audio.astro';
+import Badge from '~/components/common/Badge.astro';
 import Typography from '~/components/common/Typography.astro';
 import Layout from '~/layouts/Layout.astro';
 ---
@@ -22,6 +23,12 @@ import Layout from '~/layouts/Layout.astro';
         </li>
         <li>
           🔹 En Signal Home, podrás enviar una señal a través del espacio a casa, cuando estés preparada para volver a estar juntos, para siempre.
+        </li>
+        <li>
+          <Badge text="new" /> En Daily Log, puedes enviar pequeños mensajes diarios, dejando un rastro diario de tus pensamientos, como destellos que iluminan la oscuridad del espacio.
+        </li>
+        <li>
+          <Badge text="new" /> En The Observatory, explorarás ideas y preguntas que trascienden el tiempo, reflexionando sobre los misterios del universo, la vida y todo lo que habita entre las estrellas.
         </li>
       </ul>
 
