--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Typography from '~/components/common/Typography.astro';
 import Layout from '~/layouts/Layout.astro';
 ---
 
-<Layout title="Welcome Aboard, Voyager">
+<Layout title="Ad Astra" subtitle='Hacia las estrellas'>
   <main class="container">
     <div class="space-y-5">
       <p>
