--- a/src/components/common/Prose.astro
+++ b/src/components/common/Prose.astro
@@ -3,7 +3,7 @@
 ---
 
 <div
-  class="prose prose-h1:font-bold prose-h1:text-xl mx-auto text-white
+  class="prose prose-h1:font-bold prose-h1:text-xl mx-auto prose-headings:text-white text-white
   prose-a:text-blue-600 prose-p:text-justify prose-img:rounded-xl
   prose-headings:underline"
 >
