--- a/src/pages/transmission/index.astro
+++ b/src/pages/transmission/index.astro
@@ -8,7 +8,7 @@ import Layout from '~/layouts/Layout.astro';
   <main class="container space-y-6 flex flex-col items-center">
     <div class="flex-1">
       <Button id="activateAudio" text="Haz click para comenzar" />
-      <audio id="audioPlayer" src="/public/music/as_we_are.opus" preload="auto"></audio>
+      <audio id="audioPlayer" src="/music/as_we_are.opus" preload="auto"></audio>
     </div>
     <div id="mensaje" class="max-w-screen-md text-center mx-auto space-y-80 md:text-4xl text-3xl relative">
       <div class="message__fragment">
